# cpp_00_04

./: .gitignore  CMakeLists.txt  README.md  example.cpp  ft_pr.c
cpp00/ex00/: Makefile  megaphone.cpp
cpp00/ex01/: Makefile  contact.cpp  main.cpp  phonebook.cpp  phonebook.hpp
cpp01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
cpp01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
cpp01/ex02/: Makefile  main.cpp
cpp01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
cpp01/ex04/: Makefile  main.cpp  replace.cpp  replace.hpp
cpp01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp01/ex06/: Harl.cpp  Makefile  main.cpp
cpp02/ex00/: Fixed.cpp  Fixed.hpp  main.cpp
cpp02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
cpp03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
cpp03/ex01/: ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp03/ex02/: ClapTrap.cpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp03/ex03/: ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp04/ex00/: Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  main.cpp
cpp04/ex01/: Animal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp
cpp04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  (+7 more)
(+28 files in other folders)
