cmake_minimum_required(VERSION 3.26)
project(cpp_modules)

set(CMAKE_CXX_STANDARD 98)

add_executable(cpp_modules
#	CPP 00 - EX 00
#		cpp00/ex00/megaphone.cpp
#	CPP 01 - EX 00
#		cpp01/ex00/main.cpp
#		cpp01/ex00/newZombie.cpp
#		cpp01/ex00/randomChump.cpp
#		cpp01/ex00/Zombie.cpp
#		cpp01/ex00/Zombie.hpp
#	CPP 01 - EX 01
		cpp01/ex01/main.cpp
		cpp01/ex01/Zombie.cpp
		cpp01/ex01/Zombie.hpp
		cpp01/ex01/zombieHorde.cpp
)
